divs fixed so Reach Out collumns align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,7 +364,7 @@
     width: 100%;
     border: none;
     background: #fce138;
-    
+    color: #024e76;
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
@@ -376,6 +376,7 @@
 
   /* REACH OUT STYLES END */ 
 
+/* UTILITIES */
   .text-left {
     text-align: left;
   }
